# printer_wizard

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  INSTALL.md  LICENSE  README.md  SECURITY.md  TROUBLESHOOTING.md  printer_wizard.py  pyproject.toml  requirements.txt  setup.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
src/: __init__.py  config.py  core.py  tui.py
