# Universal Printer Wizard
# Linux printer discovery and configuration tool

[tool.poetry]
name = "printer-wizard"
version = "1.0.0"
description = "Universal printer discovery and configuration tool for Linux systems using CUPS"
authors = ["Printer Wizard Contributors"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/yourusername/printer_wizard"
repository = "https://github.com/yourusername/printer_wizard"
keywords = ["printer", "cups", "linux", "network", "discovery", "ipp", "snmp"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Systems Administration",
    "Topic :: Printing",
]

[tool.poetry.dependencies]
python = "^3.9"
rich = ">=13.0.0"
pyipp = ">=0.15.0"
pysnmp = ">=6.0.0"
zeroconf = ">=0.47.0"
aiohttp = ">=3.8.0"
deepmerge = ">=1.0.0"
yarl = ">=1.8.0"

[tool.poetry.scripts]
printer-wizard = "src.tui:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
